update from connection cookbook

--- a/templates/default/mods/ssl.conf.erb
+++ b/templates/default/mods/ssl.conf.erb
@@ -1,4 +1,5 @@
 <IfModule mod_ssl.c>
+  # Keboola
   #
   # Pseudo Random Number Generator (PRNG):
   # Configure one or more sources to seed the PRNG of the SSL library.
