Allow short php tags in syrup vhost configuration

--- a/templates/default/syrup.keboola.com.conf.erb
+++ b/templates/default/syrup.keboola.com.conf.erb
@@ -16,6 +16,7 @@
     php_value post_max_size 2048M
     php_value upload_max_filesize  2048M
     php_value date.timezone "Europe/Prague"
+    php_admin_value short_open_tag on
 
     <Directory /www/syrup-router/web>
         AllowOverride All
@@ -48,6 +49,7 @@
     php_value post_max_size 2048M
     php_value upload_max_filesize  2048M
     php_value date.timezone "Europe/Prague"
+    php_admin_value short_open_tag on
 
     <Directory /www/syrup-router/web>
         AllowOverride All
