fix: apache24 access control

--- a/templates/default/syrup.keboola.com.conf.erb
+++ b/templates/default/syrup.keboola.com.conf.erb
@@ -20,6 +20,7 @@
 
     <Directory /www/syrup-router/web>
         AllowOverride All
+         Require all granted
     </Directory>
 
 #AWS ELB http > https on client side
@@ -53,6 +54,7 @@
 
     <Directory /www/syrup-router/web>
         AllowOverride All
+         Require all granted
     </Directory>
 
 SSLEngine on
