--- a/templates/default/transformation.keboola.com.conf.erb
+++ b/templates/default/transformation.keboola.com.conf.erb
@@ -11,6 +11,7 @@
 
     <Directory /www/transformation/latest/public>
         AllowOverride All
+        Require all granted
     </Directory>
 
     php_admin_value upload_tmp_dir /tmp/syrup
@@ -46,6 +47,7 @@
 
     <Directory /www/transformation/latest/public>
         AllowOverride All
+        Require all granted
     </Directory>
 
     php_admin_value upload_tmp_dir /tmp/syrup
