--- a/templates/default/syrup.keboola.com.conf.erb
+++ b/templates/default/syrup.keboola.com.conf.erb
@@ -56,13 +56,13 @@
         AllowOverride All
          Require all granted
     </Directory>
-
+    
 SSLEngine on
-SSLProtocol all -SSLv2
-SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
-SSLCertificateFile <%= node[:apache][:dir] %>/ssl/x.keboola.com.crt
-SSLCertificateKeyFile <%= node[:apache][:dir] %>/ssl/x.keboola.com.key
-SSLCACertificateFile <%= node[:apache][:dir] %>/ssl/rapidssl.intermediate.ca
+SSLProtocol all -SSLv3 -SSLv2
+SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK
+SSLCertificateFile /etc/httpd/ssl/x.keboola.com.crt
+SSLCertificateKeyFile /etc/httpd/ssl/x.keboola.com.key
+SSLCACertificateFile /etc/httpd/ssl/rapidssl.intermediate.ca
 SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown downgrade-1.0 force-response-1.0
 
 </VirtualHost>
