--- a/templates/default/queue.queue-receive-kill.conf.erb
+++ b/templates/default/queue.queue-receive-kill.conf.erb
@@ -1,2 +1,3 @@
+instance ${N}
 respawn
 exec su -s /bin/sh -c 'exec "$0" "$@"' deploy --  php /www/syrup-router/components/queue/current/vendor/keboola/syrup/app/console syrup:queue:receive-kill
