--- a/templates/default/syrup.keboola.com.conf.erb
+++ b/templates/default/syrup.keboola.com.conf.erb
@@ -4,8 +4,8 @@
 
   DocumentRoot /www/syrup-router/web
 
-  ErrorLog "|/usr/bin/logger -t 'apache_ssl_<%= @params[:server_name] %>_err' -p local1.info"
-  CustomLog "|/usr/bin/logger -t 'apache_ssl_<%= @params[:server_name] %>' -p local1.info" combined
+  ErrorLog "|/usr/bin/logger -t 'apache_<%= @params[:server_name] %>_err' -p local1.info"
+  CustomLog "|/usr/bin/logger -t 'apache_<%= @params[:server_name] %>' -p local1.info" combined
 
   RewriteEngine On
    # force ssl
