--- a/templates/default/queue.queue-receive.conf.erb
+++ b/templates/default/queue.queue-receive.conf.erb
@@ -1,3 +1,4 @@
 instance ${QUEUE}-${N}
 respawn
+env LANG=en_US.UTF-8
 exec su -s /bin/sh -c 'exec "$0" "$@"' deploy --  php /www/syrup-router/components/queue/current/vendor/keboola/syrup/app/console syrup:queue:receive $QUEUE $N
