--- a/templates/default/docker.collect-container-stats.conf.erb
+++ b/templates/default/docker.collect-container-stats.conf.erb
@@ -5,6 +5,7 @@ exec docker run \
   -v /var/run:/var/run:rw \
   -v /sys:/sys:ro \
   -v /var/lib/docker/:/var/lib/docker:ro \
+  -v /cgroup:/sys/fs/cgroup:ro \
   -e AWS_ACCESS_KEY_ID=<%= node['aws']['aws_access_key_id'] %> \
   -e AWS_SECRET_ACCESS_KEY=<%= node['aws']['aws_secret_access_key'] %> \
   quay.io/keboola/cadvisor-app:v0.10.0 \
