--- a/templates/default/queue.queue-container-stats-process.conf.erb
+++ b/templates/default/queue.queue-container-stats-process.conf.erb
@@ -1,3 +1,3 @@
 instance ${QUEUE}-${N}
 respawn
-exec su -s /bin/sh -c 'exec "$0" "$@"' deploy --  php /www/syrup-router/components/queue/current/vendor/keboola/syrup/app/console syrup:queue:container-stats-process $QUEUE
+exec su -s /bin/sh -c 'exec "$0" "$@"' deploy --  php /www/syrup-router/components/queue/current/vendor/keboola/syrup/app/console syrup:queue:metrics-process-container-stats $QUEUE
